# thesis

./: .gitignore  README.md  instructions.md  notes.md  proposal.md  pyproject.toml
logs/: generate_drift_log.py  split_log.py  sudden_drift.xes
notebooks/: experiment.ipynb  xes2table.ipynb
scripts/: generate_synthetic_ocel.py  xes2csv.py
