[project]
name = "thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "notebook>=7.5.5",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pm4py>=2.7.22.2",
    "scikit-learn>=1.8.0",
    "streamlit>=1.56.0",
    "torch>=2.11.0",
]
