[project]
name = "thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "notebook>=7.5.5",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pm4py",
    "scikit-learn>=1.8.0",
    "streamlit>=1.56.0",
    "torch>=2.11.0",
    "cdlg-package",
    "plotly>=6.7.0",
]

[tool.uv.sources]
pm4py = { path = "pm4py", editable = true }
cdlg-package = { path = "cdlg-package", editable = true }
